# ghostwave

./: .gitignore  ALSA.md  CHANGELOG.md  Cargo.toml  NVIDIA.md  PIPEWIRE.md  README.md  TODO.md  build.rs
assets/icons/: ghostwave.icns
config/: default.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  DOCS.md.old  INDEX.md  INTEGRATION.md  KNOWN_GAPS.md  NVIDIA.md  PERFORMANCE.md  PIPEWIRE.md  RTX_5090_OPTIMIZATIONS.md  nvcontrol-integration.md  phantomlink-integration.md  troubleshooting.md
examples/: config.toml
ghostwave-core/: Cargo.toml
ghostwave-core/benches/: latency.rs  throughput.rs
ghostwave-core/examples/: 01_basic_processing.rs  02_gpu_acceleration.rs  03_ffi_usage.rs  04_realtime_scheduling.rs
ghostwave-core/include/: ghostwave.h
ghostwave-core/src/: alsa.rs  compressor.rs  config.rs  config_v2.rs  cpal_backend.rs  de_esser.rs  device_detection.rs  device_manager.rs  dsp_pipeline.rs  error.rs  ffi.rs  frame_format.rs  gpu_acceleration.rs  ipc_server.rs  jack.rs  latency_optimizer.rs  lib.rs  low_latency.rs  noise_suppression.rs  parametric_eq.rs  pipewire.rs  pipewire_integration.rs  processor.rs  rtx_acceleration.rs  rtx_denoising.rs  simd_acceleration.rs  structured_logging.rs  telemetry.rs
ghostwave-core/src/ai_denoise/: echo_cancel.rs  features.rs  inference.rs  mod.rs  model_manager.rs  rnnoise.rs  tensorrt.rs  voice_isolation.rs
ghostwave-vst/: Cargo.toml
ghostwave-vst/src/: editor.rs  lib.rs  params.rs  processing.rs
packaging/: PKGBUILD  PKGBUILD-core
release/: PKGBUILD  PKGBUILD-core
src/: alsa_module.rs  audio.rs  autoload.rs  config.rs  device_detection.rs  ipc.rs  jack_module.rs  low_latency.rs  main.rs  noise_suppression.rs  phantomlink.rs  pipewire_module.rs  rtx_acceleration.rs  systemd.rs
systemd/: ghostwave.service  ghostwave.user.service
