[package]
name = "ghostwave"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pipewire = "0.8"
cpal = "0.15"
clap = { version = "4.0", features = ["derive"] }
dasp = { version = "0.11", features = ["signal", "interpolate", "ring_buffer"] }
dirs = "5.0"
