[workspace]
members = ["ghostwave-core", "ghostwave-vst"]
resolver = "2"

[package]
name = "ghostwave"
version = "0.2.0"
edition = "2024"

[dependencies]
ghostwave-core = { path = "./ghostwave-core", features = ["pipewire-backend", "alsa-backend", "jack-backend", "cpal-backend"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pipewire = "0.8"
cpal = "0.15"
crossbeam = "0.8"
libc = "0.2"
alsa = "0.8"
jack = "0.11"
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.0"
dasp = { version = "0.11", features = ["signal", "interpolate", "ring_buffer"] }
dirs = "5.0"
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-ipc-server = "18.0"
uuid = { version = "1.0", features = ["v4"] }

# NVIDIA RTX acceleration (optional feature)
[dependencies.cudarc]
version = "0.11"
optional = true
default-features = false
features = ["std", "cuda-12000", "driver"]

[features]
default = []
# RTX acceleration - can be explicitly enabled or auto-detected via build.rs
# When CUDA is detected at build time, `has_cuda` cfg is set automatically
nvidia-rtx = ["cudarc", "ghostwave-core/nvidia-rtx"]

[build-dependencies]
# No external dependencies needed for build.rs
