[package]
name = "ghostwave-core"
version = "0.1.0"
edition = "2024"
description = "Core audio processing library for GhostWave - Linux RTX Voice"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ghostkellz/ghostwave"
keywords = ["audio", "noise-cancellation", "rtx", "linux", "real-time"]
categories = ["multimedia::audio", "api-bindings"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
crossbeam = "0.8"
dasp = { version = "0.11", features = ["signal", "interpolate", "ring_buffer"] }
dirs = "5.0"
libc = "0.2"

# Optional features for different backends
pipewire = { version = "0.8", optional = true }
alsa = { version = "0.8", optional = true }
jack = { version = "0.11", optional = true }
cpal = { version = "0.15", optional = true }

# NVIDIA RTX acceleration (optional)
cudarc = { version = "0.11", optional = true, default-features = false, features = ["std", "cuda-12000"] }

[features]
default = ["cpal"]

# Audio backends
pipewire-backend = ["pipewire"]
alsa-backend = ["alsa"]
jack-backend = ["jack"]
cpal-backend = ["cpal"]

# GPU acceleration
nvidia-rtx = ["cudarc"]

# All features
full = ["pipewire-backend", "alsa-backend", "jack-backend", "cpal-backend", "nvidia-rtx"]