[package]
name = "ghostwave-core"
version = "0.1.0"
edition = "2024"
description = "Core audio processing library for GhostWave - Linux RTX Voice"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ghostkellz/ghostwave"
keywords = ["audio", "noise-cancellation", "rtx", "linux", "real-time"]
categories = ["multimedia::audio", "api-bindings"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
crossbeam = "0.8"
dasp = { version = "0.11", features = ["signal", "interpolate", "ring_buffer"] }
dirs = "5.0"
libc = "0.2"
notify = "6.0"
tokio = { version = "1.0", features = ["full"] }
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-ipc-server = "18.0"
uuid = { version = "1.0", features = ["v4"] }

# DSP and signal processing
rustfft = "6.2"
realfft = "3.3"
num-complex = "0.4"
num-traits = "0.2"

# Neural network inference
ndarray = { version = "0.16", features = ["rayon"] }
ort = { version = "2.0.0-rc.10", optional = true, default-features = false, features = ["load-dynamic"] }

# SIMD acceleration
wide = "0.7"
bytemuck = { version = "1.14", features = ["derive"] }

# Optional features for different backends
pipewire = { version = "0.8", optional = true }
libspa = { version = "0.8", optional = true }
alsa = { version = "0.8", optional = true }
jack = { version = "0.11", optional = true }
cpal = { version = "0.15", optional = true }

# NVIDIA RTX acceleration (optional)
cudarc = { version = "0.11", optional = true, default-features = false, features = ["std", "cuda-12000", "driver"] }

[features]
default = ["cpal"]

# Audio backends
pipewire-backend = ["pipewire", "libspa"]
alsa-backend = ["alsa"]
jack-backend = ["jack"]
cpal-backend = ["cpal"]

# GPU acceleration
nvidia-rtx = ["cudarc"]
cuda-tensorrt = ["cudarc"]
vulkan-compute = []
opencl = []

# ONNX Runtime inference
onnx-inference = ["ort"]

# All features
full = ["pipewire-backend", "alsa-backend", "jack-backend", "cpal-backend", "nvidia-rtx", "cuda-tensorrt", "vulkan-compute", "onnx-inference"]

[dev-dependencies]
tempfile = "3.10"